RESOLVED FIXED141666
Check for the assume_nonnull feature instead of noescape
https://bugs.webkit.org/show_bug.cgi?id=141666
Summary Check for the assume_nonnull feature instead of noescape
Anders Carlsson
Reported 2015-02-16 14:01:56 PST
Check for the assume_nonnull feature instead of noescape
Attachments
Patch (2.37 KB, patch)
2015-02-16 14:02 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2015-02-16 14:02:31 PST
Anders Carlsson
Comment 2 2015-02-16 14:41:09 PST
Note You need to log in before you can comment on or make changes to this bug.