Check for the assume_nonnull feature instead of noescape https://bugs.webkit.org/show_bug.cgi?id=141666

Reviewed by Dan Bernstein.

* Shared/API/Cocoa/WKFoundation.h:

Canonical link: https://commits.webkit.org/159692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180175 268f45cc-cd09-0410-ab3c-d52691b4dbfc